--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -38,7 +38,7 @@
 }
 
 #recentUploadsList {
-  display: inline-flex;
+  display: flex;
 
   // center items
   // justify-content: center; // center on x
@@ -65,7 +65,7 @@
 
 #divSlice {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 3fr 1fr;
   grid-gap: 6px;
 }
 
@@ -215,7 +215,7 @@
   display: flex;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
+@media only screen and (min-device-width: 100px) and (max-device-width: 800px) {
   #searchBar,
   #newResourceButton,
   #editResourceButton {
@@ -229,7 +229,10 @@
   }
 
   #informationSection {
-    margin-top: 25px;
     float: none;
+  }
+
+  #categorySection {
+    margin-top: 25px;
   }
 }
